--- a/src/MannsBlog/MannsBlog.csproj
+++ b/src/MannsBlog/MannsBlog.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net5.0-windows10.0.18362.0</TargetFramework>
 	<Authors>Sascha Manns</Authors>
 		<AssemblyName>MannsBlog</AssemblyName>
 		<PackageId>MannsBlog</PackageId>
@@ -14,6 +14,15 @@
 		<UserSecretsId>f0f97328-119d-4980-873f-f1a692135d6e</UserSecretsId>
 		<Nullable>enable</Nullable>
 		<ApplicationInsightsResourceId>/subscriptions/7872a12f-66bb-46b3-8b12-edfaa181e48c/resourceGroups/WS-saschamannsde/providers/microsoft.insights/components/saschamanns</ApplicationInsightsResourceId>
+		<StartupObject>MannsBlog.Program</StartupObject>
+		<PackageLicenseFile>C:\Users\Sasch\OneDrive\source\repos\latex_curriculum_vitae-dotnet\LICENSE.md</PackageLicenseFile>
+		<SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <PlatformTarget>AnyCPU</PlatformTarget>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <PlatformTarget>AnyCPU</PlatformTarget>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -43,6 +52,7 @@
 		<PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
 		<PackageReference Include="JsonSubTypes" Version="1.8.0" />
+		<PackageReference Include="MailKit" Version="2.15.0" />
 		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.3" />
@@ -58,6 +68,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
+		<PackageReference Include="MimeKit" Version="2.15.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="RestSharp" Version="106.12.0" />
 		<PackageReference Include="Sendgrid" Version="9.22.0" />
@@ -98,10 +109,7 @@
 
 	<ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
-	<Target Name="PrepublishScript" BeforeTargets="BeforePublish">
-		<Exec Command="echo Vue Client" />
-		<Exec Command="npm ci" WorkingDirectory="client/" />
-		<Exec Command="npm run build" WorkingDirectory="client/" />
+	<Target Name="PrepublishScript" BeforeTargets="BeforePublish">		
 	</Target>
 
 </Project>
