--- a/src/MannsBlog.Tests/MannsBlog.Tests.csproj
+++ b/src/MannsBlog.Tests/MannsBlog.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
   <Authors>Sascha Manns</Authors>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows10.0.22000.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
