--- a/src/MannsBlog/MannsBlog.csproj
+++ b/src/MannsBlog/MannsBlog.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>net5.0-windows10.0.18362.0</TargetFramework>
+		<TargetFramework>net5.0-windows10.0.22000.0</TargetFramework>
 	<Authors>Sascha Manns</Authors>
 		<AssemblyName>MannsBlog</AssemblyName>
 		<PackageId>MannsBlog</PackageId>
@@ -16,7 +16,7 @@
 		<ApplicationInsightsResourceId>/subscriptions/7872a12f-66bb-46b3-8b12-edfaa181e48c/resourceGroups/WS-saschamannsde/providers/microsoft.insights/components/saschamanns</ApplicationInsightsResourceId>
 		<StartupObject>MannsBlog.Program</StartupObject>
 		<PackageLicenseFile>C:\Users\Sasch\OneDrive\source\repos\latex_curriculum_vitae-dotnet\LICENSE.md</PackageLicenseFile>
-		<SupportedOSPlatformVersion>10.0.18362.0</SupportedOSPlatformVersion>
+		<SupportedOSPlatformVersion>10.0.22000.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 	  <PlatformTarget>AnyCPU</PlatformTarget>
@@ -78,6 +78,14 @@
 
 	<ItemGroup>
 		<Content Include="EmailTemplates/**/*.txt" CopyToPublishDirectory="PreserveNewest" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="obj\**" />
+	  <Content Remove="obj\**" />
+	  <EmbeddedResource Remove="obj\**" />
+	  <None Remove="obj\**" />
+	  <TypeScriptCompile Remove="obj\**" />
 	</ItemGroup>
 
 	<ItemGroup>
