--- a/src/MannsBlog/MannsBlog.csproj
+++ b/src/MannsBlog/MannsBlog.csproj
@@ -1,28 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>net5.0-windows10.0.22000.0</TargetFramework>
-	<Authors>Sascha Manns</Authors>
+		<TargetFramework>net7.0</TargetFramework>
+		<Authors>Sascha Manns</Authors>
 		<AssemblyName>MannsBlog</AssemblyName>
 		<PackageId>MannsBlog</PackageId>
 		<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
 		<MvcRazorCompileOnPublish>false</MvcRazorCompileOnPublish>
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-		<Version>5.0.4</Version>
-		<AssemblyVersion>5.0.4.0</AssemblyVersion>
-		<FileVersion>5.0.4.0</FileVersion>
-		<UserSecretsId>f0f97328-119d-4980-873f-f1a692135d6e</UserSecretsId>
+		<Version>1.0.1</Version>
+		<AssemblyVersion>1.0.1.0</AssemblyVersion>
+		<FileVersion>1.0.1.0</FileVersion>
+		<UserSecretsId>845be935-7d32-419f-9734-f9458e0be851</UserSecretsId>
 		<Nullable>enable</Nullable>
 		<ApplicationInsightsResourceId>/subscriptions/7872a12f-66bb-46b3-8b12-edfaa181e48c/resourceGroups/WS-saschamannsde/providers/microsoft.insights/components/saschamanns</ApplicationInsightsResourceId>
 		<StartupObject>MannsBlog.Program</StartupObject>
 		<PackageLicenseFile>C:\Users\Sasch\OneDrive\source\repos\latex_curriculum_vitae-dotnet\LICENSE.md</PackageLicenseFile>
-		<SupportedOSPlatformVersion>10.0.22000.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <PlatformTarget>AnyCPU</PlatformTarget>
+		<PlatformTarget>AnyCPU</PlatformTarget>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <PlatformTarget>AnyCPU</PlatformTarget>
+		<PlatformTarget>AnyCPU</PlatformTarget>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -40,41 +39,59 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\MannsBlog.Data\MannsBlog.Data.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="AspNetcore.HealthChecks.Publisher.ApplicationInsights" Version="5.0.1" />
-		<PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="5.0.2" />
-		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
-		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.0.0" />
-		<PackageReference Include="Azure.Identity" Version="1.2.2" />
+		<PackageReference Include="AspNetCore.HealthChecks.Publisher.ApplicationInsights" Version="6.0.2" />
+		<PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="6.0.2" />
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
+		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
+		<PackageReference Include="Azure.Identity" Version="1.8.0" />
 		<PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
-		<PackageReference Include="HtmlAgilityPack" Version="1.11.37" />
-		<PackageReference Include="JsonSubTypes" Version="1.8.0" />
-		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.3" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.3" />
+		<PackageReference Include="DotNetAnalyzers.DocumentationAnalyzers.Unstable" Version="1.0.0.59">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+		<PackageReference Include="JsonSubTypes" Version="2.0.1" />
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
+		<PackageReference Include="Microsoft.AspNetCore.AzureAppServices.HostingStartup" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.0" />
 		<PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.1.6" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.3">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="5.0.3" />
-		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.3.5">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="7.0.0" />
+		<PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.9.4">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-		<PackageReference Include="RestSharp" Version="106.12.0" />
-		<PackageReference Include="Sendgrid" Version="9.22.0" />
-		<PackageReference Include="Syncfusion.Blazor" Version="19.3.0.57" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+		<PackageReference Include="SendGrid" Version="9.28.1" />
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="20.3.0.56" />
+		<PackageReference Include="Syncfusion.Licensing" Version="20.3.0.56" />
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
+		<PackageReference Include="System.Text.Encodings.Web" Version="7.0.0" />
+		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
 		<PackageReference Include="WilderMinds.AzureImageStorageService" Version="0.4.1" />
 		<PackageReference Include="WilderMinds.MetaWeblog" Version="5.0.0" />
 		<PackageReference Include="WilderMinds.RssSyndication" Version="1.7.0" />
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" PrivateAssets="All" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -82,12 +99,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Remove="obj\**" />	  
-	  <Content Remove="obj\**" />
-	  <EmbeddedResource Remove="obj\**" />	  
-	  <None Remove="obj\**" />	  
-	  <TypeScriptCompile Remove="obj\**" />
-	  <TypeScriptCompile Remove="wwwroot\lib\**" />
+		<Compile Remove="obj\**" />
+		<Content Remove="obj\**" />
+		<EmbeddedResource Remove="obj\**" />
+		<None Remove="obj\**" />
+		<TypeScriptCompile Remove="obj\**" />
+		<TypeScriptCompile Remove="wwwroot\lib\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -114,9 +131,13 @@
 	</ItemGroup>
 
 
-	<ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+	<ProjectExtensions>
+		<VisualStudio>
+			<UserProperties />
+		</VisualStudio>
+	</ProjectExtensions>
 
-	<Target Name="PrepublishScript" BeforeTargets="BeforePublish">		
+	<Target Name="PrepublishScript" BeforeTargets="BeforePublish">
 	</Target>
 
 </Project>
