--- a/src/MannsBlog/web.config
+++ b/src/MannsBlog/web.config
@@ -1,14 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <system.webServer>
-    <handlers>
-      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
-    </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%" forwardWindowsAuthToken="false" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" startupTimeLimit="3600" requestTimeout="23:00:00" hostingModel="InProcess">
-      <environmentVariables>
-        <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Productive" />
-        <environmentVariable name="COMPLUS_ForceENC" value="1" />
-      </environmentVariables>
-    </aspNetCore>
-  </system.webServer>
+	<system.webServer>
+		<handlers>
+			<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+		</handlers>
+		<httpProtocol>
+			<customHeaders>
+				<remove name="X-Powered-By"/>
+			</customHeaders>
+		</httpProtocol>
+		<security>
+			<requestFiltering removeServerHeader="true" />
+		</security>
+		<aspNetCore processPath="%LAUNCHER_PATH%" forwardWindowsAuthToken="false" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" startupTimeLimit="3600" requestTimeout="23:00:00" hostingModel="InProcess">
+			<environmentVariables>
+				<environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Productive" />
+				<environmentVariable name="COMPLUS_ForceENC" value="1" />
+			</environmentVariables>
+		</aspNetCore>
+	</system.webServer>
 </configuration>
