Fixed bugs found by Sonarcloud

--- a/src/MannsBlog/appsettings.json
+++ b/src/MannsBlog/appsettings.json
@@ -24,7 +24,9 @@
         "BlogId": "stw",
         "BlogName": "FOO",
         "UserFirstname": "BAZ",
-        "UserSurname": "BAZBAZ"
+        "UserSurname": "BAZBAZ",
+        "BlogDescription": "BLAH",
+        "BlogKeywords": "BLUBB"
     },
     "Disqus": {
         "BlogName": "FOO"
