--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore src/MannsBlog/MannsBlog.sln
+      run: dotnet restore src/MannsBlog.sln
     - name: Build
-      run: dotnet build --no-restore src/MannsBlog/MannsBlog.sln
+      run: dotnet build --no-restore src/MannsBlog.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal src/MannsBlog/MannsBlog.sln
+      run: dotnet test --no-build --verbosity normal src/MannsBlog.sln
